[gd_scene load_steps=23 format=3 uid="uid://uhy7jnx51fk4"]

[ext_resource type="Texture2D" uid="uid://dmmoonohrggmu" path="res://Art/Characters/nursesprite.png" id="2_10wre"]
[ext_resource type="Script" path="res://Scripts/Characters/Player.gd" id="2_uxfj7"]
[ext_resource type="Script" path="res://Scripts/Components/StateMachine.gd" id="3_1vsl1"]
[ext_resource type="Script" path="res://Scripts/States/PlayerMove.gd" id="4_cmsmg"]
[ext_resource type="Script" path="res://Scripts/States/PlayerIdle.gd" id="5_ahgkq"]
[ext_resource type="Script" path="res://Scripts/States/PlayerAttack.gd" id="6_m155a"]
[ext_resource type="PackedScene" uid="uid://bdn52mcph24s7" path="res://Scenes/Projectile.tscn" id="7_xewsw"]
[ext_resource type="Script" path="res://Scripts/States/PlayerDeath.gd" id="8_1x1aa"]
[ext_resource type="PackedScene" uid="uid://0t6hqkb73ll6" path="res://Scenes/Components/HealthComponent.tscn" id="8_g7q7c"]
[ext_resource type="PackedScene" uid="uid://birrs1vqowtd" path="res://Scenes/Components/HurtboxComponent.tscn" id="9_j8ufm"]

[sub_resource type="Animation" id="Animation_1prxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 565.901, 145.43, 251.554)]
}

[sub_resource type="Animation" id="Animation_iqwbg"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(0, 565.901, 145.43, 249.677)]
}

[sub_resource type="Animation" id="Animation_l5mem"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(145.43, 311.342, 144.304, 252.311)]
}

[sub_resource type="Animation" id="Animation_8lk1n"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(155.102, 48.2006, 146.3, 255.688)]
}

[sub_resource type="Animation" id="Animation_s3gib"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(0, 815.578, 145.43, 253.347)]
}

[sub_resource type="Animation" id="Animation_nvp4q"]
resource_name = "move_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(145.43, 565.901, 145.777, 246.785), Rect2(0, 565.901, 145.43, 249.677), Rect2(291.207, 565.901, 149.157, 246.785), Rect2(0, 565.901, 145.43, 249.677)]
}

[sub_resource type="Animation" id="Animation_podts"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 309.631, 135.827, 254.159), Rect2(138.41, 309.631, 154.88, 254.159), Rect2(293.29, 309.631, 162.14, 254.159), Rect2(138.41, 309.631, 154.88, 254.159)]
}

[sub_resource type="Animation" id="Animation_pp0e1"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 49.9257, 135.827, 252.893), Rect2(153.141, 49.9257, 147.934, 252.893), Rect2(304.819, 49.9257, 152.727, 252.893), Rect2(153.141, 49.9257, 147.934, 252.893)]
}

[sub_resource type="Animation" id="Animation_uaboi"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(144.421, 812.686, 153.678, 260.225), Rect2(-1.9066, 812.686, 146.328, 260.225), Rect2(292.101, 812.686, 160.6, 260.225), Rect2(-1.9066, 812.686, 146.328, 260.225)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cend0"]
_data = {
"RESET": SubResource("Animation_1prxr"),
"idle_down": SubResource("Animation_iqwbg"),
"idle_left": SubResource("Animation_l5mem"),
"idle_right": SubResource("Animation_8lk1n"),
"idle_up": SubResource("Animation_s3gib"),
"move_down": SubResource("Animation_nvp4q"),
"move_left": SubResource("Animation_podts"),
"move_right": SubResource("Animation_pp0e1"),
"move_up": SubResource("Animation_uaboi")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5cbdt"]
radius = 38.5
height = 206.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_le25g"]
radius = 37.0
height = 186.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_mask = 18
script = ExtResource("2_uxfj7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cend0")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_10wre")
region_enabled = true
region_rect = Rect2(0, 565.901, 145.43, 251.554)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_5cbdt")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_1vsl1")
initial_state = NodePath("PlayerIdle")

[node name="PlayerMove" type="Node" parent="StateMachine"]
script = ExtResource("4_cmsmg")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("5_ahgkq")

[node name="PlayerAttack" type="Node" parent="StateMachine"]
script = ExtResource("6_m155a")
projectile = ExtResource("7_xewsw")

[node name="PlayerDeath" type="Node" parent="StateMachine"]
script = ExtResource("8_1x1aa")

[node name="HealthComponent" parent="." instance=ExtResource("8_g7q7c")]
health = 100
max_health = 100

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_j8ufm")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_le25g")
